HTML: Broken branches warning

--- a/templates/repo_branches.tmpl
+++ b/templates/repo_branches.tmpl
@@ -44,6 +44,11 @@
 			</div>
 		</div>
 		<div class="padding-wrapper">
+			<p>
+			<strong>
+			Warning: Due to various recent migrations, viewing non-HEAD refs may be broken.
+			</strong>
+			</p>
 			<table id="branches">
 				<thead>
 					<tr class="title-row">
