--- a/templates/_footer.tmpl
+++ b/templates/_footer.tmpl
@@ -7,5 +7,6 @@
 {{ .global.forge_version }}
 (<a href="/-/source/source.tar.gz">source</a>,
 <a href="https://forge.lindenii.runxiyu.org/forge/-/repos/server/">upstream</a>,
-<a href="/-/source/LICENSE">license</a>)
+<a href="/-/source/LICENSE">license</a>,
+<a href="https://webirc.runxiyu.org/kiwiirc/#lindenii">support</a>)
 {{- end -}}
