--- a/static/style.css
+++ b/static/style.css
@@ -89,6 +89,7 @@ footer {
 	margin-top: 1rem;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 1rem;
 	display: block;
 	padding: 0 5px;
 	width: fit-content;
