--- a/forged/templates/index.tmpl
+++ b/forged/templates/index.tmpl
@@ -46,11 +46,11 @@
 				<tbody>
 					<tr>
 						<th scope="row">SSH public key</th>
-						<td><code>{{- .global.server_public_key_string -}}</code></td>
+						<td><code class="breakable">{{- .global.server_public_key_string -}}</code></td>
 					</tr>
 					<tr>
 						<th scope="row">SSH fingerprint</th>
-						<td><code>{{- .global.server_public_key_fingerprint -}}</code></td>
+						<td><code class="breakable">{{- .global.server_public_key_fingerprint -}}</code></td>
 					</tr>
 				</tbody>
 			</table>
